[gd_scene load_steps=4 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://AudioPlayer.gd" type="Script" id=2]
[ext_resource path="res://FileDialog.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="btPlay" type="Button" parent="."]
margin_left = 37.2579
margin_top = 71.9118
margin_right = 258.258
margin_bottom = 106.912
rect_pivot_offset = Vector2( 157.895, -181.579 )
text = "Play"

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 19.0
margin_top = 264.0
margin_right = 289.0
margin_bottom = 278.0
text = "No sound file selected"

[node name="btStop" type="Button" parent="."]
margin_left = 36.1468
margin_top = 134.74
margin_right = 258.147
margin_bottom = 167.74
text = "Stop"

[node name="btSelect" type="Button" parent="."]
margin_left = 41.3629
margin_top = 296.166
margin_right = 259.363
margin_bottom = 331.166
text = "Select"

[node name="AudioPlayer" type="Node" parent="."]
script = ExtResource( 2 )

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 275.0
margin_bottom = 300.0
rect_min_size = Vector2( 200, 300 )
window_title = "Select a File"
script = ExtResource( 3 )
